# Toolscreen

./: .gitignore  CMakeLists.txt  README.md  ToolscreenVersion.cmake  build.bat
.github/workflows/: build-liblogger.yml  build.yml  check-translations.yml  signed-build.yml
lang/: en.json  langs.json  pt_BR.json  zh_CN.json  zh_TW.json
liblogger/: CMakeLists.txt  LibLoggerVersion.cmake  Linux.cpp  Mac.cpp  Windows.cpp  base64.h  build-macos.sh  build.bat  build.sh  liblogger.rc.in
scripts/: check_translations.py  fetch_signed_liblogger.ps1  verify_pe_metadata.ps1
src/: config_defaults.h  config_diff.cpp  config_diff.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  expression_parser.cpp  fake_cursor.cpp  gui.cpp  gui.h  hook_chain.cpp  hook_chain.h  i18n.cpp  i18n.h  imgui_cache.h  imgui_input_queue.cpp  imgui_input_queue.h  input_hook.cpp  input_hook.h  logic_thread.cpp  logic_thread.h  mirror_thread.cpp  mirror_thread.h  obs_thread.cpp  obs_thread.h  profiler.cpp  render.cpp  render.h  render_thread.cpp  render_thread.h  resource.h  shared_contexts.cpp  undo_history.cpp  undo_history.h  utils.cpp  utils.h  version.cpp  version.h  virtual_camera.cpp  (+3 more)
src/bootstrap/: dllmain.cpp
src/common/: expression_parser.cpp  expression_parser.h  i18n.cpp  mode_dimensions.cpp  mode_dimensions.h  path_sanitize.inl  profiler.cpp  profiler.h  utils.cpp  utils.h  version.h.in
src/config/: config_defaults.h  config_migration.cpp  config_migration.h  config_profiles.cpp  config_toml.cpp  config_toml.h  default.toml  ninjabrain_preset_ninjabrainbot.toml
src/features/: boat_icons.h  browser_overlay.cpp  browser_overlay.h  cursor_trail.cpp  cursor_trail.h  fake_cursor.cpp  game_state_source.cpp  game_state_source.h  interactive_mirror_create.cpp  interactive_mirror_create.h  minecraft_font.h  ninjabrainClient.cpp  ninjabrainClient.h  ninjabrain_api.cpp  ninjabrain_api.h  ninjabrain_client.cpp  ninjabrain_client.h  ninjabrain_data.cpp  ninjabrain_data.h  window_overlay.cpp  window_overlay.h
src/gui/: gui.cpp  gui.h  gui_appearance.cpp  gui_config_io.cpp  gui_controls.cpp  gui_input.cpp  gui_internal.h  gui_runtime.cpp  gui_tabs.h  tab_appearance.inl  tab_basic_general.inl  tab_basic_other.inl  tab_hotkeys.inl  tab_images.inl  tab_inputs.inl  tab_mirrors.inl  tab_misc.inl  tab_modes.inl  tab_mouse.inl  tab_settings.inl  tab_supporters.inl  tab_window_overlays.inl
src/gui/tabs/: gui_tabs.h  tab_appearance.inl  tab_basic_general.inl  tab_basic_other.inl  tab_browser_overlays.inl  tab_hotkeys.inl  tab_images.inl  tab_inputs.inl  tab_mirrors.inl  tab_misc.inl  tab_modes.inl  tab_mouse.inl  tab_ninjabrain_overlay.inl  tab_overlays.inl  tab_settings.inl  tab_supporters.inl  tab_window_overlays.inl
src/hooks/: hook_chain.cpp  hook_chain.h  input_hook.cpp  input_hook.h
src/platform/: resource.h  resource.rc
src/render/: animated_texture_playback.h  background_fit_layout.cpp  background_fit_layout.h  mirror_thread.cpp  mirror_thread.h  obs_thread.cpp  obs_thread.h  render.cpp  render.h  render_thread.cpp  render_thread.h
src/runtime/: auto_updater.cpp  auto_updater.h  logic_thread.cpp
tests/: background_fit_layout_tests.cpp  game_state_source_tests.cpp  gui_integration_tests.cpp  interactive_mirror_create_tests.cpp  ninjabrain_api_tests.cpp  path_sanitize_tests.cpp
tests/gui_integration/: config_tests.inl  rebind_tests.inl  render_tests.inl  runner.inl  ui_and_log_tests.inl
